# SampleGen

./: .gitignore  MIXER_TRAINING.md  README.md  README_PROCESSING.md  README_STEMS.md  main.py  pyproject.toml  requirements.txt
config/: faust_mixer_config.json
runs/mixer_all_e5_lr2e-05/: events.out.tfevents.1745424333.frieren.2362370.0
src/: __init__.py  main.py  samplegen.py
src/data_processing/: README.md  __init__.py  analyze.py  audio_distorter.py  chunking.py  create_dataset.py  download_youtube.py  extract_artist_stems.py  extract_fma_hiphop_stems.py  faust_distorter.py  stem_extraction.py  transcription.py
src/models/: __init__.py  producer.py
src/models/generator/: base_generator.py  bass_generator.py  drum_generator.py  other_generator.py
src/music/: __init__.py
src/music/generator/: __init__.py
src/music/mixer/: __init__.py  midi_handling.py  mixer.py  mixing.py  mixing_tools.py
src/music/planner/: planner.py
src/training/: __init__.py  dataset.py  prompts.py  trainer.py  utils.py
src/tuning/: __init__.py  mixer_dataset.py  planner_finetuner.py  prompts.py  run_test_dataloader.sh  test_dataloader_standalone.py  test_mixer_training.py  tune_generator.py  tune_mixer.py  tune_mixer_sft.py
src/utils/: download_youtube.py  stem_extraction.py
stem_test_output/sample_1/: info.txt
stem_test_output/sample_2/: info.txt
stem_test_output/sample_3/: info.txt
tests/: __init__.py  conftest.py  test_core_functionality.py  test_data_processing.py  test_dataset.py  test_faust_distorter.py  test_generators.py  test_main_producer.py  test_mixer.py  test_producer.py  test_stem_extraction.py  test_trainer.py  test_training_utils.py
(+9 files in other folders)
