[project]
name = "samplegen"
version = "0.1.0"
description = "Hip-Hop Producer AI - Unified Music Production System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.20.0",
    "audiocraft>=1.0.0",
    "audioread>=3.0.1",
    "basic-pitch>=0.2.6",
    "beautifulsoup4>=4.11.0",
    "bitsandbytes>=0.37.0",
    "black>=25.1.0",
    "datasets>=2.14.0",
    "demucs>=4.0.0",
    "ffmpeg-python>=0.2.0",
    "gradio>=3.50.2",
    "hydra-core>=1.3.2",
    "ipython>=8.10.0",
    "isort>=6.0.1",
    "laion-clap>=1.1.7",
    "librosa>=0.10.0",
    "matplotlib>=3.5.0",
    "numpy>=1.22.0",
    "pandas>=2.2.3",
    "peft>=0.5.0",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "pytest>=8.3.5",
    "requests>=2.28.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.15.3",
    "selenium>=4.10.0",
    "sentencepiece>=0.1.99",
    "soundfile>=0.12.1",
    "streamlit>=1.24.0",
    "tensorboard>=2.12.0",
    "tensorboardx>=2.6",
    "tokenizers>=0.21.1",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "tqdm>=4.65.0",
    "transformers>=4.36.0",
    "wandb>=0.15.0",
    "webdriver-manager>=3.8.0",
    "youtube-dl>=2021.12.17",
]

[project.scripts]
samplegen = "src.main_producer:main"
samplegen-demo = "src.main_producer:demo_with_example"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=all-in-one --ignore=faust"
